--- a/CA_Portal/home/static/home/style.css
+++ b/CA_Portal/home/static/home/style.css
@@ -1,59 +1,55 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 .header {
-  background: linear-gradient(
-      0deg,
-      rgba(0, 17, 38, 0.22),
-      rgba(0, 17, 38, 0.22)
-    ),
-    url(/static/home/img/bg.png);
-  min-height: 100vh;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  position: relative;
+    background: linear-gradient( 0deg, rgba(0, 17, 38, 0.22), rgba(0, 17, 38, 0.22)), url(/static/home/img/bg.png);
+    min-height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 
 nav {
-  position: fixed;
-  display: flex;
-  opacity: 100%;
-  padding: 2% 6%;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  transition: background 0.5s;
-  z-index: 5;
+    position: fixed;
+    display: flex;
+    opacity: 100%;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    transition: background 0.5s;
+    z-index: 5;
 }
 
 nav.scrolled {
-  background: #ffffff;
-  z-index: 5;
+    background: #ffffff;
+    z-index: 5;
 }
 
 nav img {
-  width: 209px;
+    width: 209px;
 }
 
 .nav-links {
-  flex: 1;
-  text-align: right;
+    flex: 1;
+    text-align: right;
 }
 
 .nav-links ul li {
-  list-style: none;
-  display: inline-block;
-  padding: 8px 28px;
-  position: relative;
+    list-style: none;
+    display: inline-block;
+    padding: 8px 28px;
+    position: relative;
+    cursor: pointer;
 }
 
 .nav-links ul li a {
-  color: #ffffff;
-  text-decoration: none;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 #navlink1.scroll,
@@ -61,7 +57,7 @@ nav img {
 #navlink3.scroll,
 #navlink4.scroll,
 #navlink5.scroll {
-  color: #334d6e;
+    color: #334d6e;
 }
 
 .nav-links ul li a:hover,
@@ -70,274 +66,386 @@ nav img {
 #navlink3.scroll:hover,
 #navlink4.scroll:hover,
 #navlink5.scroll:hover {
-  color: #109cf1;
-  transition: 0.5s;
+    color: #109cf1;
+    transition: 0.5s;
 }
 
 #join-button {
-  border: 1px solid #109cf1;
-  box-sizing: border-box;
-  border-radius: 4px;
-  background-color: #ffffff;
+    border: 1px solid #109cf1;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #ffffff;
 }
 
 #join-button.scroll {
-  border: 1px solid #ffffff;
-  box-sizing: border-box;
-  border-radius: 4px;
-  background-color: #109cf1;
+    border: 1px solid #ffffff;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #109cf1;
 }
 
 #join-button a {
-  font-weight: 600;
-  color: #109cf1;
+    font-weight: 600;
+    color: #109cf1;
 }
 
 #join-button-text.scroll {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 #join-button a:hover {
-  color: #334d6e;
-  transition: 0.5s;
+    color: #334d6e;
+    transition: 0.5s;
+}
+
+.backdrop {
+    background-color: blue;
+}
+
+.popup {
+    position: fixed;
+    top: -150%;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1.25);
+    -webkit-transform: translate(-50%, -50%) scale(1.25);
+    -moz-transform: translate(-50%, -50%) scale(1.25);
+    -ms-transform: translate(-50%, -50%) scale(1.25);
+    -o-transform: translate(-50%, -50%) scale(1.25);
+    width: 400px;
+    padding: 20px 30px;
+    background: white;
+    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -webkit-transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -moz-transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -ms-transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -o-transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+}
+
+.popup.active {
+    top: 50%;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
+    transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -webkit-transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -moz-transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -ms-transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+    -o-transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+}
+
+.popup .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 15px;
+    height: 15px;
+    background: #888;
+    color: #eee;
+    text-align: center;
+    line-height: 15px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    cursor: pointer;
+}
+
+.popup .form h2 {
+    text-align: center;
+    color: #222;
+    margin: 10px 0px 20px;
+    font-size: 25px;
+}
+
+.popup .form .form-element {
+    margin: 15px 20px 15px 0px;
+}
+
+.popup .form .form-element label {
+    font-size: 14px;
+    color: #222;
+}
+
+.popup .form .form-element input[type="text"],
+.popup .form .form-element input[type="password"] {
+    margin-top: 5px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.popup .form .form-element button {
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    background: blue;
+    color: #f5f5f5;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: pointer;
+}
+
+.popup .form .form-element a {
+    display: block;
+    text-align: right;
+    font-size: 15px;
+    color: #1a79ca;
+    text-decoration: none;
+    font-weight: 600;
 }
 
 .text-box {
-  width: 90%;
-  left: 55%;
-  top: 50%;
-  color: #ffffff;
-  position: absolute;
-  transform: translate(-50%, -50%);
+    width: 90%;
+    left: 55%;
+    top: 50%;
+    color: #ffffff;
+    position: absolute;
+    transform: translate(-50%, -50%);
 }
 
 .text-box h2 {
-  font-weight: normal;
-  font-size: 40px;
-  padding-bottom: 10px;
+    font-weight: normal;
+    font-size: 40px;
+    padding-bottom: 10px;
 }
 
 .text-box h1 {
-  font-weight: 600;
-  font-size: 60px;
-  padding-bottom: 10px;
+    font-weight: 600;
+    font-size: 60px;
+    padding-bottom: 10px;
 }
 
 .text-box p {
-  width: 38%;
-  font-weight: 400;
-  padding-bottom: 20px;
+    width: 38%;
+    font-weight: 400;
+    padding-bottom: 20px;
 }
 
 .hero-btn {
-  border: 1px solid #109cf1;
-  display: inline-block;
-  text-decoration: none;
-  padding: 8px 28px;
-  box-sizing: border-box;
-  border-radius: 4px;
-  background-color: #109cf1;
-  color: #ffffff;
-  position: relative;
-  cursor: pointer;
+    border: 1px solid #109cf1;
+    display: inline-block;
+    text-decoration: none;
+    padding: 8px 28px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #109cf1;
+    color: #ffffff;
+    position: relative;
+    cursor: pointer;
 }
 
 .hero-btn:hover {
-  color: #334d6e;
-  transition: 0.5s;
+    color: #334d6e;
+    transition: 0.5s;
 }
 
 .iframe-container {
-  position: relative;
-  margin-top: 5%;
-  margin-left: 17%;
-  padding-bottom: 56.25%;
-  height: 0;
+    position: relative;
+    margin-top: 5%;
+    margin-left: 17%;
+    padding-bottom: 56.25%;
+    height: 0;
 }
 
 .iframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80%;
-  height: 80%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 80%;
 }
 
 .video-text p {
-  margin-top: -10%;
-  text-align: center;
+    margin-top: -10%;
+    text-align: center;
 }
 
 .joining {
-  text-align: center;
-  color: #109cf1;
-  font-size: 22px;
-  margin-top: 100px;
-  margin-bottom: 60px;
-  font-weight: 500;
+    text-align: center;
+    color: #109cf1;
+    font-size: 22px;
+    margin-top: 100px;
+    margin-bottom: 60px;
+    font-weight: 500;
 }
 
 .join {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  padding-bottom: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 5%;
 }
 
 .join div {
-  justify-content: space-around;
-  align-items: center;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .join div img {
-  text-align: center;
+    text-align: center;
 }
 
 .join div h2 {
-  text-align: center;
-  color: #334d6e;
-  font-weight: 500;
+    text-align: center;
+    color: #334d6e;
+    font-weight: 500;
 }
 
 .join div p {
-  text-align: center;
-  color: #707683;
-  font-weight: 400;
+    text-align: center;
+    color: #707683;
+    font-weight: 400;
 }
 
 #blue {
-  background-color: #109cf1;
-  margin: 60px 0px 60px 0px;
+    background-color: #109cf1;
+    margin: 60px 0px 60px 0px;
 }
 
 #res {
-  color: white;
-  text-align: center;
-  padding: 100px 0px 0px 0px;
-  font-size: 32px;
+    color: white;
+    text-align: center;
+    padding: 100px 0px 0px 0px;
+    font-size: 32px;
 }
 
 #man {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #man img {
-  width: 30%;
-  height: 30%;
-  margin-top: 7%;
-  margin-left: 9%;
-  margin-bottom: 9%;
+    width: 30%;
+    height: 30%;
+    margin-top: 7%;
+    margin-left: 9%;
+    margin-bottom: 9%;
 }
 
 .box-text {
-  background-color: #f3f6f8;
-  padding: 4% 4%;
-  border-radius: 4px;
-  margin: 7%;
+    background-color: #f3f6f8;
+    padding: 4% 4%;
+    border-radius: 4px;
+    margin: 7%;
 }
 
 .box-text div h2 {
-  margin-bottom: 2%;
-  color: #334D6E;
+    margin-bottom: 2%;
+    color: #334D6E;
 }
 
 .box-text div p {
-  margin-bottom: 4%;
-  color: #707683;
+    margin-bottom: 4%;
+    color: #707683;
 }
 
 nav .fa {
-  display: none;
+    display: none;
 }
 
 @media only screen and (max-width: 600px) {
-  html,
-  body {
-    overflow-x: hidden;
-  }
-
-  .nav-links ul li {
-    display: block;
-  }
-
-  .nav-links ul li a:hover {
-    color: #334d6e;
-    transition: 0.5s;
-  }
-
-  .nav-links {
-    position: absolute;
-    background-color: #109cf1;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: -200px;
-    text-align: left;
-    z-index: 2;
-    transition: 0.5s;
-  }
-
-  nav .fa {
-    display: block;
-    margin: 10px;
-    font-size: 22px;
-    cursor: pointer;
-    color: #334D6E;
-  }
-
-  .nav-links ul {
-    padding: 30px;
-  }
-
-  .joining {
-    text-align: center;
-    font-size: 30px;
-  }
-  .join {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .join div img {
-    width: 60%;
-    height: 60%;
-    margin-left: 20%;
-  }
-
-  .text-box h2 {
-    font-size: 30px;
-    text-align: center;
-    margin-left: -60%;
-  }
-  .text-box h1 {
-    font-size: 30px;
-    text-align: center;
-    margin-left: -60%;
-  }
-
-  .text-box p {
-    text-align: center;
-  }
-
-  .text-box {
-    width: 90%;
-    left: 40%;
-    top: 50%;
-    transform: translate(-10%, -60%);
-  }
-
-  #man {
-    flex-direction: column;
-  }
-
-  #man img {
-    width: 50%;
-    height: 50%;
-    margin-left: 0%;
-  }
+    html,
+    body {
+        overflow-x: hidden;
+    }
+    .nav-links ul li {
+        display: block;
+    }
+    .nav-links ul li a:hover {
+        color: #334d6e;
+        transition: 0.5s;
+    }
+    .nav-links {
+        position: absolute;
+        background-color: #109cf1;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 0.5s;
+    }
+    nav .fa {
+        display: block;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+        color: #334D6E;
+    }
+    .nav-links ul {
+        padding: 30px;
+    }
+    .joining {
+        text-align: center;
+        font-size: 30px;
+    }
+    .join {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .join div img {
+        width: 60%;
+        height: 60%;
+        margin-left: 20%;
+    }
+    .text-box h2 {
+        font-size: 30px;
+        text-align: center;
+        margin-left: -60%;
+    }
+    .text-box h1 {
+        font-size: 30px;
+        text-align: center;
+        margin-left: -60%;
+    }
+    .text-box p {
+        text-align: center;
+    }
+    .text-box {
+        width: 90%;
+        left: 40%;
+        top: 50%;
+        transform: translate(-10%, -60%);
+    }
+    #man {
+        flex-direction: column;
+    }
+    #man img {
+        width: 50%;
+        height: 50%;
+        margin-left: 0%;
+    }
+    .popup {
+        width: 70%;
+        height: auto;
+    }
 }
